[package]
name = "secret-staking"
version = "0.1.0"
authors = ["Itzik <itzik@keytango.io>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]
# default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
#cranelift = ["cosmwasm-vm/default-cranelift"]
#singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", rev = "004c6bc" }
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", rev = "004c6bc", features = ["staking"] }
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit", branch = "debug-print" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
rust_decimal = { version = "1.7.0", default-features = false, features = ["serde"]}
cargo-common = { path = "packages/cargo_common" }
secretstaking-token = { path = "packages/staking_token" }

[dev-dependencies]
cosmwasm-schema = { version = "0.9.2" }
